<?xml version="1.0" encoding="utf-8"?>
<!--
    menu_measurement.xml
    
    計測画面のオプションメニュー
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_center"
        android:icon="@drawable/ic_my_location"
        android:title="Center"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_layers"
        android:icon="@drawable/ic_map_layers"
        android:title="@string/action_layers"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_map_type"
        android:icon="@drawable/ic_layers"
        android:title="@string/action_map_type"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_screenshot"
        android:icon="@drawable/ic_screenshot"
        android:title="@string/action_screenshot"
        app:showAsAction="ifRoom" />

</menu>

